results/SVCOMP/0-shot/log-arraylength1-2024_03_18_22_55_56.txt
class arraylength1 {
  //@ requires size >= 0;
  //@ ensures \result == -1 ==> size < 0;
  //@ ensures \result == 0 ==> size >= 0 && \fresh(\result);
  //@ ensures \result == 1 ==> size >= 0 && \fresh(\result);
  public static int func(int size) {
    if (size < 0) return -1;
    
    int int_array[] = new int[size];
    
    //@ assert int_array.length == size;
    //@ assert \fresh(int_array);
    
    if(int_array.length != size)
      return 0;
    return 1;
  }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:4: error: The argument of \fresh must be of reference type
  //@ ensures \result == 0 ==> size >= 0 && \fresh(\result);
                                                   ^
/home/max/Documents/JMLGPT/tmp/arraylength1.java:5: error: The argument of \fresh must be of reference type
  //@ ensures \result == 1 ==> size >= 0 && \fresh(\result);
                                                   ^
2 errors

